[package]
name = "stackbt_automata_impl"
version = "0.1.0"
authors = ["eaglgenes101 <eaglgenes101@gmail.com>"]
readme = "../README.md"
license = "MIT/Apache-2.0"
description = "Automata implementations for StackBT"
repository = "https://github.com/eaglgenes101/stackbt"

[features]
default = []

# Enable all nightly-dependent features
nightly = ["unsized_locals"]

# Enable support for unsized locals
unsized_locals = []