[package]
name = "stackbt_behavior_tree"
version = "0.1.0"
authors = ["eaglgenes101 <eaglgenes101@gmail.com>"]
readme = "../README.md"
license = "MIT/Apache-2.0"

[dependencies]
stackbt_automata_impl = { path = "../automata_impl", version = "^0.1.0" }

[features]
default = []

# Enable all nightly-dependent features
nightly = ["try_trait", "unsized_locals"]

# Enable support for the Try trait
try_trait = []

# Enable support for unsized locals
unsized_locals = []