[package]
name = "stackbt_behavior_tree"
version = "0.1.2"
authors = ["eaglgenes101 <eaglgenes101@gmail.com>"]
readme = "../README.md"
license = "MIT/Apache-2.0"
description = "Behavior Trees for StackBT"
repository = "https://github.com/eaglgenes101/stackbt"

[dependencies]
stackbt_automata_impl = { path = "../automata_impl", version = "^0.1.2" }
num-derive = "0.2.2"
num-traits = "0.2.6"

[features]
default = []

# Enable all nightly-dependent features
nightly = ["try_trait"]

# Enable support for the Try trait
try_trait = []