[package]
name = "stackbt"
version = "0.1.0"
authors = ["eaglgenes101 <eaglgenes101@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
stackbt_automata_impl = { path = "../automata_impl", version = "^0.1.0"  }
stackbt_behavior_tree = { path = "../behavior_tree", version = "^0.1.0"  }
stackbt_macros = { path = "../macros", version = "^0.1.0"  }

[features]
default = []

nightly = ["try_trait", "unsized_locals"]

try_trait = [
    "stackbt_behavior_tree/try_trait"
]

unsized_locals = [
    "stackbt_automata_impl/unsized_locals",
    "stackbt_behavior_tree/unsized_locals"
]