[package]
name = "stackbt"
version = "0.1.1"
authors = ["eaglgenes101 <eaglgenes101@gmail.com>"]
readme = "../README.md"
license = "MIT/Apache-2.0"
description = "A small collection of crates for game AI"
repository = "https://github.com/eaglgenes101/stackbt"

[dependencies]
stackbt_automata_impl = { path = "../automata_impl", version = "^0.1.1"  }
stackbt_behavior_tree = { path = "../behavior_tree", version = "^0.1.1"  }
stackbt_macros = { path = "../macros", version = "^0.1.1"  }

[features]
default = []

nightly = ["try_trait"]

try_trait = [
    "stackbt_behavior_tree/try_trait"
]